--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="txt_content_weight">%1$.2f pounds</string>
     <string name="txt_content_damage">%1$s - %2$s</string>
     <string name="txt_content_armor_class">%1$d %2$s</string>
+    <string name="txt_menu_search">menu_search</string>
 
 </resources>
