--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="txt_dices">Dices</string>
     <string name="txt_spells">Spells</string>
     <string name="txt_equipments">Equipments</string>
-    <string name="txt_error_title">Algo deu errado</string>
-    <string name="txt_error_subtitle">tente novamente mais tarde</string>
+    <string name="txt_error_title">Something went wrong</string>
+    <string name="txt_error_subtitle">try again later</string>
 
     <!--spell details-->
     <string name="txt_level">Level: %1$d</string>
@@ -37,5 +37,14 @@
     <string name="txt_content_damage">%1$s - %2$s</string>
     <string name="txt_content_armor_class">%1$d %2$s</string>
     <string name="txt_menu_search">menu_search</string>
+
+    <!--Dices-->
+    <string name="txt_d4">D4</string>
+    <string name="txt_d6">D6</string>
+    <string name="txt_d8">D8</string>
+    <string name="txt_d10">D10</string>
+    <string name="txt_d12">D12</string>
+    <string name="txt_d20">D20</string>
+    <string name="txt_roll">Roll!</string>
 
 </resources>
